gaming info and links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="borderlands.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Borderlands 2</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">When I was younger and I first got my Xbox 360, this was the first game that I played on it. I absolutely love this game. Its characters, story, and gameplay are all amazing. However, the thing that stands out about this game the most is its dark sense of humor, which fits very well. Because of this sense of humor, it doesnt really take itself too serious which makes it a blast to play.</p>
             </div>
           </div>
         </div>
@@ -45,7 +45,7 @@
             <img src="r6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Tom Clancy's Rainbow Six Siege</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">I have a very big love/hate relationship with this game. I love this game because of how much fun I have had playing this game with my friends, 1,600 hours of fun to be exact. I have also met a couple of my good friends through this game, which makes it special to me. However, on the otherhand, this game is infuriating to my friends and I, largely due to the developer. It is probably one of the most consistantly buggy and unbalanced games that we have played, yet it is so addicting. It is a game that has some of the highest highs and lowest lows.</p>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
             <img src="rdr2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Red Dead Redemption 2</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">This is a game that I have always known for being an amazing game, yet I had never played until recently. I am so glad that I did. While the gameplay itself can get a bit repetitive, everything else about this game definitely makes up for it. The graphics in this game are some of the most stunning graphics I have ever seen. The soundtrack is absolutely amazing. However, most importantly, the characters and story make this game one of the best that I have ever played.</p>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
     </div>
     <div class="warhammer-cont">
       <h1>Warhammer</h1>
-      <p> My second main hobby is playing a tabletop game called Warhammer 40K with my friends. I have only been into 40K for about a year as of this point, yet it has quickly become one of my favorite things to do. I enjoy aspects of the hobby, from building the models, painting the models, reading the lore, and playing the game itself. I would try to explain the story behind 40k, yet that could easily take multiple pages to explain. However, I definitely recommend checking it out as it has some of the best story writing I have ever read. The tabletop game on the otherhand is a lot easier to explain. In short, you collect and build models that each have unique rules. Each model costs a certain number of points to field and you build up an army depending on how many points are going to be used in a game. For example, an average game is 2,000 points for each person, so if I add up the points cost of every model in my army, they must be less than or equal to 2,000 points. After each person has their armies, they fight each other using the rules that their models have. There are a lot more specifics than that, but this is just a brief description. My favorite aspect of this hobby is painting the miniatures. It's both relaxing and rewarding at the same time. I don't even know how many times I have spent a night listening to music and painting models. It honestly has the same impact that gaming does, it also allows me to disconnect from reality for a bit. It's also really nice to spend a couple of hours painting and have something completed that I painted myself. Plus, it really does make the experience of playing 40K on tabletop a lot more immersive than if I had unpainted models. However, probably the most important part of this hobby for me is that it reignited my creativity. When I was younger, I used to love sketching and painting, but I slowly lost my creativity and passion for it, which I believe to be partially caused by gaming. Yet, painting these miniatures has helped reignited that passion and creativity, which I truely am glad about. Below are some of my favorite models that I have painted up till this point.</p>
+      <p> My second main hobby is playing a tabletop game called Warhammer 40K with my friends. I have only been into 40K for about a year as of this point, yet it has quickly become one of my favorite things to do. I enjoy all aspects of the hobby, from building the models, painting the models, reading the lore, and playing the game itself. I would try to explain the story behind 40k, yet that could easily take multiple pages to explain. However, I definitely recommend checking it out as it has some of the best story writing I have ever read. The tabletop game on the otherhand is a lot easier to explain. In short, you collect and build models that each have unique rules. Each model costs a certain number of points to field and you build up an army depending on how many points are going to be used in a game. For example, an average game is 2,000 points for each person, so if I add up the points cost of every model in my army, they must be less than or equal to 2,000 points. After each person has their armies, they fight each other using the rules that their models have. There are a lot more specifics than that, but this is just a brief description. My favorite aspect of this hobby is painting the miniatures. It's both relaxing and rewarding at the same time. I don't even know how many times I have spent a night listening to music and painting models. It honestly has the same impact that gaming does, it also allows me to disconnect from reality for a bit. It's also really nice to spend a couple of hours painting and have something completed that I painted myself. Plus, it really does make the experience of playing 40K on tabletop a lot more immersive than if I had unpainted models. However, probably the most important part of this hobby for me is that it reignited my creativity. When I was younger, I used to love sketching and painting, but I slowly lost my creativity and passion for it, which I believe to be partially caused by gaming. Yet, painting these miniatures has helped reignite that passion and creativity, which I truely am glad about. Below are some of my favorite models that I have painted up till this point.</p>
       <div class="row">
         <div class="col">
           <div class="card1" style="width: 24rem;">
@@ -103,6 +103,9 @@
             <div class="card-body">
               <h2>Gojira</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj4hsWG_dX6AhXuLEQIHSMDBH0QwqsBegQIDhAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dvrfr9t6FuTU&usg=AOvVaw1gRt4hIUiw9gtq8Fx8OiPN" target="_blank" role="button">Gift of Guilt</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjyv9P8_dX6AhXTATQIHe_QBoQQtwJ6BAgHEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Deg_OyqkITSE&usg=AOvVaw3dFFmhqLk5-j01FnhHknxT" target="_blank" role="button">Flying Whales</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjFqbm__tX6AhW3IzQIHVWvAKQQtwJ6BAgEEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D3p85-KtgDSs&usg=AOvVaw3MQId5A4oKc76T7gzIakGs" target="_blank" role="button">Born for One Thing</a>
             </div>
           </div>
         </div>
@@ -112,6 +115,9 @@
             <div class="card-body">
               <h2>Leprous</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjqurDU_tX6AhVNIjQIHaQzAyEQtwJ6BAgOEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DvMY5jkQHhRo&usg=AOvVaw0AJE6cIO4kSSsvwpYBVMWV" target="_blank" role="button">Third Law</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjL9Off_tX6AhWnATQIHQyjAcsQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dnj6fM2KpyOA&usg=AOvVaw39zlwv2OvvysdfMjZTF-kG" target="_blank" role="button">The Sky is Red</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwikgazo_tX6AhWzJn0KHU_cBp8QtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D1QKx_2yg4cU&usg=AOvVaw3tYp83O2uTfTzqNon00YD1" target="_blank" role="button">Slave</a>
             </div>
           </div>
         </div>
@@ -121,6 +127,9 @@
             <div class="card-body">
               <h2>Between the Buried and Me</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjnr-Hy_tX6AhXJGDQIHTVPCNQQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D2q93v_nHmSM&usg=AOvVaw0qAzwMu_jQmA2Esq3DvHi4" target="_blank" role="button">Fix the Error</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwj-2ueA_9X6AhUaAjQIHSf8ACUQtwJ6BAgNEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DOgBJOG8mLMw&usg=AOvVaw0YFbJj41UIEjtySxHnIM8Q" target="_blank" role="button">White Walls</a>
+              <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwiV1smN_9X6AhXiJX0KHfNSAyEQtwJ6BAgQEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DgOhzsOLO7cI&usg=AOvVaw35SJRAJltoRh6a8HsVhfSS" target="_blank" role="button">Sun of Nothing</a>
             </div>
           </div>
         </div>
