--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
-  <body style="background-color: #a7d2fa;">
+  <body style="background-color: #8080ff;">
       <!-- Nav Bar -->
     <nav class="navbar bg-light">
       <div class="container-fluid">
@@ -18,7 +18,7 @@
       </div>
     </nav>
 
-      <img src="charles.jpg" alt="tocotoucan" class="center">
+      <img src="charles.jpg" alt="charles" class="hero-image">
       <h1 class="header">About Me:</h1>
       <div class="hero-text">
         <p>Hi, my name is Charles. I am 19 years old and have lived in San Antonio, Texas my whole life. I am currently in my Sophomore year at the University of the Incarnate Word and am majoring in Computer Information Systems - Programming. As of right now, I hope to do something in the realm of programming in the future, but who knows what the future has in store me.</p>
@@ -28,8 +28,8 @@
 
   <div class="hobby-cont">
     <div class="gaming-cont">
-      <h1>Gaming</h1>
-      <p>My first main hobby is gaming. I have been playing video games for as long as I can remember, making it my longest spanning hobby. I feel as though gaming has had a pretty major impact on my life. First of all, it has always been my go to way to destress as it allows me to disconnect from reality for a bit. Second of all, it has led to me meeting many of my closest friends today. Lastly, I honestly believe that gaming is what first sparked my interest in computers. It might just be the root of the reason for why I am studying what I am studying. Below are some of my favorite games that I have ever played.</p>
+      <h1 class="subhead">Gaming</h1>
+      <p class="hobby-info">My first main hobby is gaming. I have been playing video games for as long as I can remember, making it my longest spanning hobby. I feel as though gaming has had a pretty major impact on my life. First of all, it has always been my go to way to destress as it allows me to disconnect from reality for a bit. Second of all, it has led to me meeting many of my closest friends today. Lastly, I honestly believe that gaming is what first sparked my interest in computers. It might just be the root of the reason for why I am studying what I am studying. Below are some of my favorite games that I have ever played.</p>
       <div class="row">
         <div class="col">
           <div class="card1" style="width: 24rem;">
@@ -61,15 +61,17 @@
      </div>
     </div>
     <div class="warhammer-cont">
-      <h1>Warhammer</h1>
-      <p> My second main hobby is playing a tabletop game called Warhammer 40K with my friends. I have only been into 40K for about a year as of this point, yet it has quickly become one of my favorite things to do. I enjoy all aspects of the hobby, from building the models, painting the models, reading the lore, and playing the game itself. I would try to explain the story behind 40k, yet that could easily take multiple pages to explain. However, I definitely recommend checking it out as it has some of the best story writing I have ever read. The tabletop game on the otherhand is a lot easier to explain. In short, you collect and build models that each have unique rules. Each model costs a certain number of points to field and you build up an army depending on how many points are going to be used in a game. For example, an average game is 2,000 points for each person, so if I add up the points cost of every model in my army, they must be less than or equal to 2,000 points. After each person has their armies, they fight each other using the rules that their models have. There are a lot more specifics than that, but this is just a brief description. My favorite aspect of this hobby is painting the miniatures. It's both relaxing and rewarding at the same time. I don't even know how many times I have spent a night listening to music and painting models. It honestly has the same impact that gaming does, it also allows me to disconnect from reality for a bit. It's also really nice to spend a couple of hours painting and have something completed that I painted myself. Plus, it really does make the experience of playing 40K on tabletop a lot more immersive than if I had unpainted models. However, probably the most important part of this hobby for me is that it reignited my creativity. When I was younger, I used to love sketching and painting, but I slowly lost my creativity and passion for it, which I believe to be partially caused by gaming. Yet, painting these miniatures has helped reignite that passion and creativity, which I truely am glad about. Below are some of my favorite models that I have painted up till this point.</p>
+      <h1 class="subhead">Warhammer</h1>
+      <p class="hobby-info"> My second main hobby is playing a tabletop game called Warhammer 40K with my friends. I have only been into 40K for about a year as of this point, yet it has quickly become one of my favorite things to do. I enjoy all aspects of the hobby, from building the models, painting the models, reading the lore, and playing the game itself. I would try to explain the story behind 40k, yet that could easily take multiple pages to explain. However, I definitely recommend checking it out as it has some of the best story writing I have ever read. The tabletop game on the otherhand is a lot easier to explain. In short, you collect and build models that each have unique rules. Each model costs a certain number of points to field and you build up an army depending on how many points are going to be used in a game. For example, an average game is 2,000 points for each person, so if I add up the points cost of every model in my army, they must be less than or equal to 2,000 points. After each person has their armies, they fight each other using the rules that their models have. There are a lot more specifics than that, but this is just a brief description. My favorite aspect of this hobby is painting the miniatures. It's both relaxing and rewarding at the same time. I don't even know how many times I have spent a night listening to music and painting models. It honestly has the same impact that gaming does, it also allows me to disconnect from reality for a bit. It's also really nice to spend a couple of hours painting and have something completed that I painted myself. Plus, it really does make the experience of playing 40K on tabletop a lot more immersive than if I had unpainted models. However, probably the most important part of this hobby for me is that it reignited my creativity. When I was younger, I used to love sketching and painting, but I slowly lost my creativity and passion for it, which I believe to be partially caused by gaming. Yet, painting these miniatures has helped reignite that passion and creativity, which I truely am glad about. Below are some of my favorite models that I have painted up till this point.</p>
+      <a class="btn btn-primary" href="https://wh40k.lexicanum.com/wiki/Main_Page" target="_blank" role="button">More about Warhammer 40K</a>
       <div class="row">
         <div class="col">
           <div class="card1" style="width: 24rem;">
             <img src="sorcerer.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Exalted Sorcerer</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">This model is one that I recently repainted and is probably one of my best painted smaller units. It is one of my HQ units that are in my Thousand Sons army.</p>
+              <a class="btn btn-primary" href="https://wh40k.lexicanum.com/wiki/Exalted_Sorcerer" target="_blank" role="button">More about Exalted Sorcerers</a>
             </div>
           </div>
         </div>
@@ -78,7 +80,8 @@
             <img src="ghaz.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Ghazghull Thraka</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">This model is one that I have painted recently and is probably one of my best painted bigger units. It is one of my HQ units that are in my Ork army.</p>
+              <a class="btn btn-primary" href="https://wh40k.lexicanum.com/wiki/Ghazghkull_Mag_Uruk_Thraka" target="_blank" role="button">More about Ghazghull Thraka</a>
             </div>
           </div>
         </div>
@@ -87,22 +90,23 @@
             <img src="magnus.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Magnus the Red</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">This model is one that I have been recently trying to touch up a bit and is by far the largest model in my collection. It is one of my HQ units that are in my Thousand Sons army and is probably my favorite model and unit in the game.</p>
+              <a class="btn btn-primary" href="https://wh40k.lexicanum.com/wiki/Magnus" target="_blank" role="button">More about Magnus the Red</a>
             </div>
           </div>
         </div>
      </div>
     </div>
     <div class="music-cont">
-      <h1>Favorite Songs/Bands</h1>
-      <p>My third main hobby is listening to music. I don't know if many people would call this a hobby, but I certainly do. I have always loved listening to music and it has definitely impacted my life significantly. When I was younger, I did not really have any specific genre that I listened to. However, as of the past couple of years, I have fallen in love with the metal genre and many of its subgenres, such as progressive metal and death metal. I think that the best part of this hobby is how accessible it is compared to my other hobbies. With gaming, I have to be at home. With playing 40K, my friends and I have to set up a time and go to a game store. With painting, I also have to be at home. Meanwhile, with music I can listen to it at anytime and while doing anything. Below are some of my favorite bands as of right now.</p>
+      <h1 class="subhead">Favorite Songs/Bands</h1>
+      <p class="hobby-info">My third main hobby is listening to music. I don't know if many people would call this a hobby, but I certainly do. I have always loved listening to music and it has definitely impacted my life significantly. When I was younger, I did not really have any specific genre that I listened to. However, as of the past couple of years, I have fallen in love with the metal genre and many of its subgenres, such as progressive metal and heavy metal. I think that the best part of this hobby is how accessible it is compared to my other hobbies. With gaming, I have to be at home. With playing 40K, my friends and I have to set up a time and go to a game store. With painting, I also have to be at home. Meanwhile, with music I can listen to it at anytime and while doing anything. Below are some of my favorite bands as of right now.</p>
       <div class="row">
         <div class="col">
           <div class="card1" style="width: 24rem;">
             <img src="gojira.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Gojira</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Gojira is a French heavy metal band.</p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj4hsWG_dX6AhXuLEQIHSMDBH0QwqsBegQIDhAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dvrfr9t6FuTU&usg=AOvVaw1gRt4hIUiw9gtq8Fx8OiPN" target="_blank" role="button">Gift of Guilt</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjyv9P8_dX6AhXTATQIHe_QBoQQtwJ6BAgHEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Deg_OyqkITSE&usg=AOvVaw3dFFmhqLk5-j01FnhHknxT" target="_blank" role="button">Flying Whales</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjFqbm__tX6AhW3IzQIHVWvAKQQtwJ6BAgEEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D3p85-KtgDSs&usg=AOvVaw3MQId5A4oKc76T7gzIakGs" target="_blank" role="button">Born for One Thing</a>
@@ -114,7 +118,7 @@
             <img src="leprous.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Leprous</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Leprous is a Norwegian progressive metal band.</p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjqurDU_tX6AhVNIjQIHaQzAyEQtwJ6BAgOEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DvMY5jkQHhRo&usg=AOvVaw0AJE6cIO4kSSsvwpYBVMWV" target="_blank" role="button">Third Law</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjL9Off_tX6AhWnATQIHQyjAcsQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dnj6fM2KpyOA&usg=AOvVaw39zlwv2OvvysdfMjZTF-kG" target="_blank" role="button">The Sky is Red</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwikgazo_tX6AhWzJn0KHU_cBp8QtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D1QKx_2yg4cU&usg=AOvVaw3tYp83O2uTfTzqNon00YD1" target="_blank" role="button">Slave</a>
@@ -126,7 +130,7 @@
             <img src="btbam.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Between the Buried and Me</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Between the Buried and Me is an American progressive metal band.</p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjnr-Hy_tX6AhXJGDQIHTVPCNQQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D2q93v_nHmSM&usg=AOvVaw0qAzwMu_jQmA2Esq3DvHi4" target="_blank" role="button">Fix the Error</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwj-2ueA_9X6AhUaAjQIHSf8ACUQtwJ6BAgNEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DOgBJOG8mLMw&usg=AOvVaw0YFbJj41UIEjtySxHnIM8Q" target="_blank" role="button">White Walls</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwiV1smN_9X6AhXiJX0KHfNSAyEQtwJ6BAgQEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DgOhzsOLO7cI&usg=AOvVaw35SJRAJltoRh6a8HsVhfSS" target="_blank" role="button">Sun of Nothing</a>
