--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <img src="gojira.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Gojira</h2>
-              <p class="card-text">Gojira is a French heavy metal band.</p>
+              <p class="card-text">Gojira is a French heavy metal band. This band has much heavier vocals than I usually listen to. While they are good, the main reason that I love this band is the heavy instrumentals. Here are some of my favorite songs by them:</p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj4hsWG_dX6AhXuLEQIHSMDBH0QwqsBegQIDhAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dvrfr9t6FuTU&usg=AOvVaw1gRt4hIUiw9gtq8Fx8OiPN" target="_blank" role="button">Gift of Guilt</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjyv9P8_dX6AhXTATQIHe_QBoQQtwJ6BAgHEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Deg_OyqkITSE&usg=AOvVaw3dFFmhqLk5-j01FnhHknxT" target="_blank" role="button">Flying Whales</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjFqbm__tX6AhW3IzQIHVWvAKQQtwJ6BAgEEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D3p85-KtgDSs&usg=AOvVaw3MQId5A4oKc76T7gzIakGs" target="_blank" role="button">Born for One Thing</a>
@@ -118,7 +118,7 @@
             <img src="leprous.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Leprous</h2>
-              <p class="card-text">Leprous is a Norwegian progressive metal band.</p>
+              <p class="card-text">Leprous is a Norwegian progressive metal band. Their amazing lead vocalist has a very unique sounds that I really enjoy. That combined with the amazing instrumentals of this band make it one of my favorites. Here are some of my favorite songs by them:</p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjqurDU_tX6AhVNIjQIHaQzAyEQtwJ6BAgOEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DvMY5jkQHhRo&usg=AOvVaw0AJE6cIO4kSSsvwpYBVMWV" target="_blank" role="button">Third Law</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjL9Off_tX6AhWnATQIHQyjAcsQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dnj6fM2KpyOA&usg=AOvVaw39zlwv2OvvysdfMjZTF-kG" target="_blank" role="button">The Sky is Red</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwikgazo_tX6AhWzJn0KHU_cBp8QtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D1QKx_2yg4cU&usg=AOvVaw3tYp83O2uTfTzqNon00YD1" target="_blank" role="button">Slave</a>
@@ -130,7 +130,7 @@
             <img src="btbam.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h2>Between the Buried and Me</h2>
-              <p class="card-text">Between the Buried and Me is an American progressive metal band.</p>
+              <p class="card-text">Between the Buried and Me is an American progressive metal band. They have a very good mixture of heavy and clean vocals, which I really like. They also have some amazing instrumentals. However, the best part of this band is how well the songs flow between one another in an album, so I definitely recommend listening to albums in their entirety. Here are some of my favorite individual songs by them though: </p>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwjnr-Hy_tX6AhXJGDQIHTVPCNQQtwJ6BAgJEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D2q93v_nHmSM&usg=AOvVaw0qAzwMu_jQmA2Esq3DvHi4" target="_blank" role="button">Fix the Error</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwj-2ueA_9X6AhUaAjQIHSf8ACUQtwJ6BAgNEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DOgBJOG8mLMw&usg=AOvVaw0YFbJj41UIEjtySxHnIM8Q" target="_blank" role="button">White Walls</a>
               <a class="btn btn-primary" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=video&cd=&cad=rja&uact=8&ved=2ahUKEwiV1smN_9X6AhXiJX0KHfNSAyEQtwJ6BAgQEAI&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DgOhzsOLO7cI&usg=AOvVaw35SJRAJltoRh6a8HsVhfSS" target="_blank" role="button">Sun of Nothing</a>
